# swagger.yaml
@@ -69,6 +69,17 @@ paths:
               url:
                 type: string
                 description: Required if channel is http. URL to send the requests to.
+              method:
+                type: string
+                enum:
+                  - GET
+                  - POST
+              contentType:
+                type: string
+                  enum:
+                    - text/plain
+                    - application/json
+                    - application/x-www-form-urlencoded
               data:
                 type: string
                 description: Plain text to post with the request body.
